# FastApi_practice_project

./: .env.example  .gitignore  FastApi 공부 문서.txt  README.md  main.py  pyproject.toml
.claude/tasks/: TODO.md
app/: main.py
app/api/: router.py
app/api/routes/: health.py
app/core/: config.py
app/core/exception/: app_error.py  customer_exceptions.py  global_exception_handlers.py
app/customer/controller/: customer_controller.py
app/customer/dto/: customer_dto.py
app/customer/repository/: customer_repository.py
app/customer/service/: customer_service.py
app/db/: connection.py  queries.py
sql/mappers/customer/: customer.sql
sql/schema/: customer.sql
tests/: test_health.py
